# faiss

./: .travis.yml  CMakeLists.txt
.circleci/: config.yml
.travis/: install_c.sh
c_api/: CMakeLists.txt  Makefile
c_api/gpu/: Makefile
tmp_build_c_api/: Dockerfile
